# jambi

./: .envrc  .gitignore  .rust-analyzer.toml  .rustfmt.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  config.example.toml  flake.nix  jambi  rust-toolchain.toml  shell.nix
.cargo/: config.toml
src/: audio.rs  cli.rs  config.rs  gui.rs  lib.rs  main.rs  vad.rs  vosk_engine.rs  whisper.rs
